--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ MONGO_URL="mongodb+srv://rvsrathore2002:6hVTOEyyzhv5dEDd@cluster0.r33aqut.mongod
  REFRESH_SECRET_KEY="REFRESH_SECRET_KEY"
 #  6hVTOEyyzhv5dEDd
 # mongodb+srv://rvsrathore2002:6hVTOEyyzhv5dEDd@cluster0.r33aqut.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+GOOGLE_CLIENT_ID=356067358357-j06dk5lpq6gfbka32g5dr9p7r2rrmf1l.apps.googleusercontent.com                                                                                               
