--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ MONGO_URL="mongodb+srv://rvsrathore2002:6hVTOEyyzhv5dEDd@cluster0.r33aqut.mongod
 ZAAKPAY_MERCHANT_ID=236e6378d80e492f95283a119417ef01
 ZAAKPAY_SECRET_KEY=6b86b801cd5e4822b1fb2fa6528213d4
 ZAAKPAY_ENDPOINT=https://api.zaakpay.com/transactD?v=5
-
+ZAAKPAY_CALLBACK_URL=https://api.jajamblockprints.com/api/pay/pay
 
 
 #  6hVTOEyyzhv5dEDd
