--- a/.env
+++ b/.env
@@ -8,10 +8,11 @@ MONGO_URL="mongodb+srv://rvsrathore2002:6hVTOEyyzhv5dEDd@cluster0.r33aqut.mongod
 
  # Zaakpay Config
 ZAAKPAY_MERCHANT_ID=236e6378d80e492f95283a119417ef01
-ZAAKPAY_SECRET_KEY=6b86b801cd5e4822b1fb2fa6528213d4
-ZAAKPAY_ENDPOINT=https://api.zaakpay.com/transactD?v=5
-ZAAKPAY_CALLBACK_URL=https://api.jajamblockprints.com/api/pay/pay
-
+ZAAKPAY_SECRET_KEY=8bc8c997888f42cea0e2e82b958de393
+ZAAKPAY_ENDPOINT=https://api.zaakpay.com/transactD?v=8
+ZAAKPAY_CALLBACK_URL=https://api.jajamblockprints.com/api/zaakpay/callback
+BASE_URL=https://api.jajamblockprints.com
+# BASE_URL=http://localhost:5007
 
 #  6hVTOEyyzhv5dEDd
 # mongodb+srv://rvsrathore2002:6hVTOEyyzhv5dEDd@cluster0.r33aqut.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
