--- a/.env
+++ b/.env
@@ -7,11 +7,10 @@ MONGO_URL="mongodb+srv://rvsrathore2002:6hVTOEyyzhv5dEDd@cluster0.r33aqut.mongod
 
 
  # Zaakpay Config
-ZAAKPAY_MERCHANT_ID=236e6378d80e492f95283a119417ef01
-ZAAKPAY_SECRET_KEY=8bc8c997888f42cea0e2e82b958de393
-ZAAKPAY_ENDPOINT=https://api.zaakpay.com/transactD?v=8
+ZAAKPAY_MERCHANT_ID=b19e8f103bce406cbd3476431b6b7973
+ZAAKPAY_SECRET_KEY=0678056d96914a8583fb518caf42828a
+ZAAKPAY_ENDPOINT=https://zaakstaging.zaakpay.com/transactD?v=8
 ZAAKPAY_CALLBACK_URL=https://api.jajamblockprints.com/api/zaakpay/callback
-BASE_URL=https://api.jajamblockprints.com
 # BASE_URL=http://localhost:5007
 
 #  6hVTOEyyzhv5dEDd
