--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r dotenv/config ./index.js"
+    "dev": "nodemon ./index.js"
   },
   "author": "",
   "license": "ISC",
