--- a/.env
+++ b/.env
@@ -1,19 +1,13 @@
-#  MONGO_URL="mongodb+srv://mainuser:rohit@cluster0.u7vt3.mongodb.net/"
-# MONGO_URL="mongodb+srv://admin:admin123@cluster0.v8asm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 MONGO_URL=mongodb+srv://rvsrathore2002:6hVTOEyyzhv5dEDd@cluster0.r33aqut.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
- PORT=5007
- SECRET_KEY=SECRET_KEY
- REFRESH_SECRET_KEY=REFRESH_SECRET_KEY
+PORT=5007
+SECRET_KEY=SECRET_KEY
+REFRESH_SECRET_KEY=REFRESH_SECRET_KEY
 
-
- # Zaakpay Config
+# Zaakpay Config
 ZAAKPAY_MERCHANT_ID=b19e8f103bce406cbd3476431b6b7973
 ZAAKPAY_SECRET_KEY=e5c37e61a9a64b10b364d4aaa9d2401f
 ZAAKPAY_ENDPOINT=https://zaakstaging.zaakpay.com/transactD?v=8
 ZAAKPAY_CALLBACK_URL=https://api.jajamblockprints.com/api/zaakpay/callback
-# BASE_URL=http://localhost:5007
 
-#  6hVTOEyyzhv5dEDd
-# mongodb+srv://rvsrathore2002:6hVTOEyyzhv5dEDd@cluster0.r33aqut.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
-GOOGLE_CLIENT_ID=356067358357-j06dk5lpq6gfbka32g5dr9p7r2rrmf1l.apps.googleusercontent.com                                                                                               
+# Google
+GOOGLE_CLIENT_ID=356067358357-j06dk5lpq6gfbka32g5dr9p7r2rrmf1l.apps.googleusercontent.com
