--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ SECRET_KEY=SECRET_KEY
 REFRESH_SECRET_KEY=REFRESH_SECRET_KEY
 
 # Zaakpay Config
-ZAAKPAY_ENDPOINT=https://zaakstaging.zaakpay.com/transactD?v=8
+ZAAKPAY_ENDPOINT=https://zaakstaging.zaakpay.com/transactU?v=8
 ZAAKPAY_MERCHANT_ID=b19e8f103bce406cbd3476431b6b7973
 ZAAKPAY_SECRET_KEY=e5c37e61a9a64b10b364d4aaa9d2401f
 ZAAKPAY_CALLBACK_URL=https://api.jajamblockprints.com/api/zaakpay/callback
