--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@
 
     ZAAKPAY_MERCHANT_ID=b19e8f103bce406cbd3476431b6b7973
     ZAAKPAY_SECRET_KEY=e5c37e61a9a64b10b364d4aaa9d2401f
-    ZAAKPAY_CALLBACK_URL=https://api.jajamblockprints.com/api/zaakpay/callback
+    ZAAKPAY_CALLBACK_URL=https://jajamblockprints.com/api/zaakpay/callback
 
     # Google
     GOOGLE_CLIENT_ID=356067358357-j06dk5lpq6gfbka32g5dr9p7r2rrmf1l.apps.googleusercontent.com
