--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@
 
     # Zaakpay Config
     # ZAAKPAY_ENDPOINT=https://zaakstaging.zaakpay.com/transactU?v=8
-    ZAAKPAY_ENDPOINT=https://zaakstaging.zaakpay.com/transactU?v=8
-
+    # ZAAKPAY_ENDPOINT=https://zaakstaging.zaakpay.com/transactU?v=8
+    ZAAKPAY_ENDPOINT=https://api.zaakpay.com/transactU?v=8
     ZAAKPAY_MERCHANT_ID=b19e8f103bce406cbd3476431b6b7973
     ZAAKPAY_SECRET_KEY=e5c37e61a9a64b10b364d4aaa9d2401f
     ZAAKPAY_CALLBACK_URL=https://jajamblockprints.com/api/zaakpay/callback
