--- a/.env
+++ b/.env
@@ -6,10 +6,10 @@
     # Zaakpay Config
     # ZAAKPAY_ENDPOINT=https://zaakstaging.zaakpay.com/transactU?v=8
     # ZAAKPAY_ENDPOINT=https://zaakstaging.zaakpay.com/transactU?v=8
-    ZAAKPAY_ENDPOINT=https://api.zaakpay.com/transactU?v=8
-    ZAAKPAY_MERCHANT_ID=b19e8f103bce406cbd3476431b6b7973
-    ZAAKPAY_SECRET_KEY=e5c37e61a9a64b10b364d4aaa9d2401f
-    ZAAKPAY_CALLBACK_URL=https://jajamblockprints.com/api/zaakpay/callback
+    # ZAAKPAY_ENDPOINT=https://api.zaakpay.com/transactU?v=8
+    # ZAAKPAY_MERCHANT_ID=b19e8f103bce406cbd3476431b6b7973
+    # ZAAKPAY_SECRET_KEY=e5c37e61a9a64b10b364d4aaa9d2401f
+    # ZAAKPAY_CALLBACK_URL=https://jajamblockprints.com/api/zaakpay/callback
 
     # Google
     GOOGLE_CLIENT_ID=356067358357-j06dk5lpq6gfbka32g5dr9p7r2rrmf1l.apps.googleusercontent.com
