--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.2",
     "mongoose": "^8.8.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "querystring": "^0.2.1"
   },
   "name": "new-folder",
   "version": "1.0.0",
